--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.2.3",
     "expo": "~46.0.9",
     "expo-camera": "~12.3.0",
+    "expo-device": "~4.3.0",
+    "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
