--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.9",
     "expo-camera": "~12.3.0",
     "expo-device": "~4.3.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
@@ -25,6 +26,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
+    "react-native-redash": "^18.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
